[fix] 채팅 과거순 300개 오류 수정